# UlamaCodex

./: docker-compose.yml  main.py  pyproject.toml
ingestion/: scraper.py
persistence/: base.py  exceptions.py  models.py  repository.py
persistence/mongodb/: client.py  settings.py
preprocessing/: parser.py
