[project]
name = "ulamacodex"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "deepagents>=0.4.3",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "playwright>=1.58.0",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
