[project]
name = "ulamacodex"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "odmantic>=1.1.0",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
